force-app/main/default/objects/Platform_Application_Junction__c/Platform_Application_Junction__c.object-meta.xml
<CustomObject>
    <description>This object has been created for QESUnity Customer Portal . This will be junction object for Platform and Application Objects for many to many relationship between these objects.</description>
    <label>Platform Application Junction</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Platform Application Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Application Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>