force-app/main/default/objects/Platform_Application_Junction__c/fields/Application_and_Top_Platform_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Application_and_Top_Platform_Ordinal__c</fullName>
    <description>combination of application and top platform ordinal to check duplicate values</description>
    <label>Application and Top Platform Ordinal</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>