force-app/main/default/objects/Platform_Application_Junction__c/fields/Platform_and_Top_Application_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Platform_and_Top_Application_Ordinal__c</fullName>
    <description>Platform and top application ordinal</description>
    <label>Platform and Top Application Ordinal</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>