force-app/main/default/objects/Platform_Application_Junction__c/fields/Top_Application__c.field-meta.xml
<CustomField>
    <fullName>Top_Application__c</fullName>
    <description>This is master detail with Custom Object &quot;Application&quot; .</description>
    <label>Top Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Platform Application Junction</relationshipLabel>
    <relationshipName>Platform_Application_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>