force-app/main/default/objects/Platform_Application_Junction__c/fields/Top_Application_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Top_Application_Ordinal__c</fullName>
    <description>This is the Ordinal/Ranking of the Application w.r.t Product.</description>
    <inlineHelpText>Ranking of the Application selected, in &quot;Top Applications List&quot;, on the Platform&apos;s detail page</inlineHelpText>
    <label>Top Application Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>