force-app/main/default/objects/Platform_Application_Junction__c/fields/Top_Platform__c.field-meta.xml
<CustomField>
    <fullName>Top_Platform__c</fullName>
    <description>This is master detail with custom object &quot;Platform&quot;</description>
    <label>Top Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Platform Application Junction</relationshipLabel>
    <relationshipName>Platform_Application_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>