force-app/main/default/objects/Platform_Application_Junction__c/fields/Top_Platform_Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Top_Platform_Ordinal__c</fullName>
    <description>This is the Ordinal/Ranking of Platform w.r.t. Application.</description>
    <inlineHelpText>Ranking of the Platform selected, in &quot;Top Platforms List&quot;, on the Application&apos;s detail page</inlineHelpText>
    <label>Top Platform Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>